# flair

./: .gitignore  LICENSE  README.md  conda_env.yml  local_environment.yml  local_requirements.txt  setup.cfg  setup.py
containers/: README.md
data/: TESS_CVZ.csv
flair/: __init__.py  ffd.py  flares.py  gp.py  inject.py  jim.py  lightcurve.py  lupita.py  plot.py
jim/: flares.py  plot.py
notebooks/: FFDs_LTM.ipynb  FFDs_LTM_original.ipynb  First end to end FFD for star.ipynb  amplitude_energy_conversions.ipynb  tom.ipynb  windows.ipynb
notes/: CVZ_workflow.md  sampling.tex
output/: Analyze Output.ipynb  README.md  Testing Post Processing Pipeline.ipynb
output/plots/: README.md
pipeline/: check_failed.py  cvz.py
post_processing/: README.md  post.py
slurm/: cvz.slurm  env.slurm  exicute.sh  exicute_post.sh  run_slurm.py  template.slurm  write_disbatch.py
slurm/depreciated/: cvz.slurm  disbatch_test  post.slurm  run_slurm.py
slurm/slurm/: run_slurm.py
