[metadata]
name = flair
url = https://github.com/TomWagg/flair
author = Tom Wagg
author_email = tomjwagg@gmail.com
license = MIT
license_files = LICENSE
description = Pipeline for tracking long-term flare variability in stars
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.10
packages = find: 
install_requires = 
    pip
    numpy
    scipy
    pandas
    lightkurve == 2.4.2

[flake8]
max-line-length = 110
exclude = **__init__.py
extend-ignore = E402
